Fix Swagger config, update WebSecurityConfig for Spring Boot 3, and other improvements